--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.profiles.active=dev
+
 spring.application.name=platzi-play
-langchain4j.open-ai.chat-model.api-key=demo
+server.servlet.context-path=/platzi-play/api
+
+#langchain4j
 langchain4j.open-ai.chat-model.model-name=gpt-4o-mini
