conexion base de datos

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,10 @@
 server.port=8090
 
+#Spring data JPA
+spring.datasource.url=jdbc:postgressql;//localhost5432/platzi_play_db
+spring.datasource.username=camilo
+spring.datasource.password=camilo.platzi
+
 #langchain4j
 langchain4j.open-ai.chat-model.api-key=demo
 #ATRIBUTOS PARA LOGS EN DESARROLLO
