--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,8 @@ spring.profiles.active=dev
 spring.application.name=platzi-play
 server.servlet.context-path=/platzi-play/api
 
+#Postgressql
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 #langchain4j
 langchain4j.open-ai.chat-model.model-name=gpt-4o-mini
