--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,6 +5,10 @@ spring.datasource.url=jdbc:postgressql;//localhost5432/platzi_play_db
 spring.datasource.username=camilo
 spring.datasource.password=camilo.platzi
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 #langchain4j
 langchain4j.open-ai.chat-model.api-key=demo
 #ATRIBUTOS PARA LOGS EN DESARROLLO
