Connect database to production with render

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,14 @@
 server.port=8080
 
+#Spring data JPA
+spring.datasource.url=jdbc:postgresql://dpg-d651viogjchc73fq9l30-a.oregon-postgres.render.com:5432/platzi_play_db_dpd9
+spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgressql://dpg-d651viogjchc73fq9l30-a.oregon-postgres.render.com:5432/platzi_play_db_dpd9
+spring.datasource.username=camilo
+spring.datasource.password=j8x4UFb9GT2kqTEPEuern7VgJICrUz2Y
+
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+
 #langchain4j
 langchain4j.open-ai.chat-model.api-key=demo
