--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
 #Spring data JPA
-spring.datasource.url=jdbc:postgresql://dpg-d651viogjchc73fq9l30-a.oregon-postgres.render.com:5432/platzi_play_db_dpd9
+spring.datasource.url=jdbc:postgresql://dpg-d651viogjchc73fq9l30-a:5432/platzi_play_db_dpd9
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgressql://dpg-d651viogjchc73fq9l30-a.oregon-postgres.render.com:5432/platzi_play_db_dpd9
 spring.datasource.username=camilo
